--- a/front-construc/src/Estilos/AdminStyles.scss
+++ b/front-construc/src/Estilos/AdminStyles.scss
@@ -94,6 +94,8 @@ $color-link-hover: black;
   z-index: 300;
   background: white;
   font-size: .6rem;
+  padding: 10px;
+  border-radius: 10px;
   position: fixed;
   position: fixed;
   bottom: 0;
