--- a/front-construc/src/Estilos/PageFYV.scss
+++ b/front-construc/src/Estilos/PageFYV.scss
@@ -9,6 +9,7 @@ $color-link-hover: black;
                               // Estilos personalizados para el Navbar
 .navbar-custom {
   background-color: $color-bg;
+  height: 100px;
 }
 
 .navbar-custom .navbar-brand,
@@ -20,16 +21,83 @@ $color-link-hover: black;
   color: $color-link-hover;
 }
 
-
+.text-capitalize{
+  text-decoration: none;
+}
                                 // Estilos para la imagen del logo
 .logoImage {
-  width: 90px; /* Ajusta el ancho según tus necesidades */
-  height: 40px; /* Ajusta la altura según tus necesidades */
+  width: 150px; /* Ajusta el ancho según tus necesidades */
+  height: 100px; /* Ajusta la altura según tus necesidades */
 }
 
                                 //Estilos para la info empresa
 
+/* Estilos generales */
+.content-pro {
+  padding: 20px;
+  text-align: center;
+}
+
+.Titulo p {
+  padding: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.proyectos-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.proyecto-card {
+  flex: 0 0 calc(30% - 20px); /* Ajusta según el número de columnas deseadas */
+  margin: 10px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  text-align: center;
+  background-color: #fff;
+}
+
+.proyecto-card img {
+  max-height: 150px;
+}
+
+.proyecto-card p {
+  font-size: 18px;
+  margin: 0;
+}
+
+/* Estilos adicionales para dispositivos más pequeños (ajustar según sea necesario) */
+@media only screen and (max-width: 1200px) {
+  .proyecto-card {
+    flex-basis: calc(50% - 20px); /* Dos columnas en pantallas medianas */
+  }
+}
+
+@media only screen and (max-width: 757px) {
+  .proyecto-card {
+    flex-basis: calc(50% - 20px); /* Dos proyectos por línea en pantallas medianas */
+  }
+}
+/* Estilos adicionales para dispositivos pequeños (ajustar según sea necesario) */
+@media only screen and (max-width: 480px) {
+  .proyecto-card {
+    flex-basis: calc(100% - 20px); /* Un proyecto por línea en pantallas pequeñas */
+  }
+}
+
+
+
 .Datosesquina {
+  z-index: 300;
+  background: white;
+  font-size: 6rem;
+  padding: 10px;
+  border-radius: 10px;
+  position: fixed;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -46,7 +114,7 @@ $color-link-hover: black;
   margin: 10px;
   color: black;
   text-align: left;
-  font-size: 15px;
+  font-size: 1.2rem;
   z-index: 1;
   font-weight: 600;
 
@@ -90,23 +158,27 @@ $color-link-hover: black;
   }
 }
 
-.ButtonVisualizar{
-  margin-left: 10px; // Ajusta el margen según tus necesidades
-  background-color: #f0f2f5; // Color de fondo del botón (verde)
-  border-color: black; // Color del borde del botón (verde)
-  color: black; // Color del texto del botón (blanco)
-  font-weight: 600;
-
-  &:hover {
-    background-color: #218838; // Color de fondo al pasar el ratón (verde oscuro)
-    border-color: #1e7e34; // Color del borde al pasar el ratón (verde más oscuro)
-  }
-}
 
 .VentanaEmer1{
+  margin: 0px;
   color: black;
-  margin-left: 200px;
 }
 .VentanaEmer{
   color: black;
 }
+
+.BienvenidoMensaje {
+  font-size: 1.3rem; // Tamaño de la fuente
+  font-weight: 600; // Peso de la fuente
+  margin: 0; // Elimina el margen para que se alinee con otros elementos
+  color: white; // Color del texto (puedes ajustar según tus necesidades)
+
+  @media (max-width: 768px) {
+    font-size: 1.2rem; // Ajustes para pantallas más pequeñas si es necesario
+  }
+
+  @media (max-width: 576px) {
+    font-size: 1rem; // Ajustes adicionales para pantallas más pequeñas si es necesario
+  }
+}
+
