--- a/front-construc/src/Estilos/styles.scss
+++ b/front-construc/src/Estilos/styles.scss
@@ -15,7 +15,7 @@
   padding: 30px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #6a4d4de9, .8;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
   h2 {
