--- a/front-construc/src/Estilos/photosvideos.scss
+++ b/front-construc/src/Estilos/photosvideos.scss
@@ -5,8 +5,8 @@
 }
 
 .card {
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
   margin: 10px;
   border: 1px solid #ccc;
   padding: 10px;
@@ -17,8 +17,11 @@
 
 .card img,
 .card video {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 85%;
   object-fit: cover; /* La imagen se ajusta manteniendo las proporciones y recortando si es necesario */
 }
 
+.dropdown-basic-button{
+  background: white;
+}
