--- a/front-construc/src/Estilos/PageProyectos.scss
+++ b/front-construc/src/Estilos/PageProyectos.scss
@@ -2,7 +2,7 @@
 
 // Personaliza los colores del Navbar
 $color-bg: #1877f2;
-$color-text: #65676b;
+$color-text: #ccc;
 $color-link: green;
 $color-link-hover: black;
 
@@ -24,22 +24,18 @@ $color-link-hover: black;
 .text-capitalize{
   text-decoration: none;
 }
-                                // Estilos para la imagen del logo
 .logoImage {
   width: 150px; /* Ajusta el ancho según tus necesidades */
   height: 100px; /* Ajusta la altura según tus necesidades */
 }
 
-                                //Estilos para la info empresa
 
-/* Estilos generales */
 .content-pro {
   padding: 20px;
   text-align: center;
 }
 
-.Titulo p {
-  padding: 10px;
+.Titulo .nav-link {
   font-size: 1rem;
   font-weight: bold;
   margin-bottom: 20px;
@@ -52,17 +48,26 @@ $color-link-hover: black;
 }
 
 .proyecto-card {
-  flex: 0 0 calc(30% - 20px); /* Ajusta según el número de columnas deseadas */
+  flex: 0 0 calc(32% - 100px); /* Ajusta según el número de columnas deseadas */
   margin: 10px;
   padding: 15px;
   border: 1px solid #ccc;
   border-radius: 8px;
   text-align: center;
-  background-color: #fff;
 }
 
 .proyecto-card img {
   max-height: 150px;
+}
+.container-pro {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.container-pro .item-pro{
+  padding: 3px;
+  font-size: 1rem;
 }
 
 .proyecto-card p {
@@ -73,7 +78,7 @@ $color-link-hover: black;
 /* Estilos adicionales para dispositivos más pequeños (ajustar según sea necesario) */
 @media only screen and (max-width: 1200px) {
   .proyecto-card {
-    flex-basis: calc(50% - 20px); /* Dos columnas en pantallas medianas */
+    flex-basis: calc(40% - 20px); /* Dos columnas en pantallas medianas */
   }
 }
 
@@ -85,7 +90,7 @@ $color-link-hover: black;
 /* Estilos adicionales para dispositivos pequeños (ajustar según sea necesario) */
 @media only screen and (max-width: 480px) {
   .proyecto-card {
-    flex-basis: calc(100% - 20px); /* Un proyecto por línea en pantallas pequeñas */
+    flex-basis: calc(100% ); /* Un proyecto por línea en pantallas pequeñas */
   }
 }
 
