Validacion de imagen y video

--- a/front-construc/src/Estilos/AdminStyles.scss
+++ b/front-construc/src/Estilos/AdminStyles.scss
@@ -165,3 +165,9 @@ $color-link-hover: black;
 .VentanaEmer{
   color: black;
 }
+
+.error-message {
+  color: red;
+  font-weight: 600;
+  font-size: 17px;
+}
