--- a/front-construc/src/Estilos/photosvideos.scss
+++ b/front-construc/src/Estilos/photosvideos.scss
@@ -5,8 +5,8 @@
 }
 
 .card {
-  width: 350px;
-  height: 350px;
+  width: 330px;
+  height: 300px;
   margin: 10px;
   border: 1px solid #ccc;
   padding: 5px;
@@ -18,12 +18,36 @@
   /* Añadir posición relativa para posicionar el menú */
 }
 
-.card img,
-.card video {
+@media (max-width: 376px) {
+  .card {
+    max-height: 240px;
+  }
+}
+
+@media (max-width: 800px) {
+  .card {
+    width: 320px;
+    height: 320px;
+  }
+}
+
+@media (max-width: 375px) {
+  .card {
+    max-height: 220px;
+  }
+}
+
+.card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 5px;
+  border-radius: 6px;
+}
+
+.card video {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
   /* La imagen se ajusta manteniendo las proporciones y recortando si es necesario */
 }
 
@@ -39,6 +63,7 @@
     margin: "10px";
   }
 }
+
 .Dropdown-fotos {
   position: absolute;
   margin: 10px;
@@ -56,7 +81,7 @@
   width: 20px;
 }
 
-.Dropdown-videos{
+.Dropdown-videos {
   position: absolute;
   margin: 10px;
 }
